src/components/MoviesList/movies_list.modules.scss
@import '../../../sass/mixins';

.moviesList {
	& header {
		display: flex;
		align-items: baseline;
		justify-content: space-between;
		font-size: 2rem;
		font-weight: var(--font-weight-semi-bold);
	}

	&__title {
		margin-bottom: 5rem;

		& h1 {
			text-transform: uppercase;
			font-size: 2.4rem;
			letter-spacing: 1px;
		}

		& h3 {
			text-transform: uppercase;
			font-size: 1.6rem;
			font-weight: var(--font-weight-semi-bold);
			margin-top: -8px;
		}
	}

	&__content {
		display: grid;
		place-items: center;
		justify-content: center;
		grid-template-columns: repeat(auto-fit, minmax(16.725rem, max-content));
		column-gap: 4rem;
		row-gap: 6rem;
		grid-auto-flow: rows;
		grid-auto-rows: max-content;

		@include respond(tab-land) {
			grid-template-columns: repeat(auto-fit, minmax(16.725rem, 30rem));
		}
	}

	& footer {
		margin-top: 5rem;
		display: flex;
		align-items: center;
		justify-content: space-between;

		& button:first-of-type svg {
			margin-right: 0.8rem;
		}
	}
}

